SERVER-11993 mongos doesn't accept write concern when index is created with insert command